--- a/svetaine/Rankdarbiai/templates/registration_success.html
+++ b/svetaine/Rankdarbiai/templates/registration_success.html
@@ -4,5 +4,5 @@
 
 {% block content %}
     <h1 class="mt-4">Registracija sėkminga</h1>
-    <p>Jūs sėkmingai u1žsiregistravote! Dabar galite prisijungti su savo prisijungimo duomenimis.</p>
+    <p>Jūs sėkmingai užsiregistravote! Dabar galite prisijungti su savo prisijungimo duomenimis.</p>
 {% endblock %}
