--- a/svetaine/Rankdarbiai/templates/user_profile.html
+++ b/svetaine/Rankdarbiai/templates/user_profile.html
@@ -3,19 +3,35 @@
 {% block title %}Vartotojo Profilis{% endblock %}
 
 {% block content %}
-    <h1 class="mt-4">Vartotojo Profilis</h1>
-    <h3>Vardas: {{ user.username }}</h3>
-    <p>El. paštas: {{ user.email }}</p>
-    <p>Adresas: {{ user.userprofile.location }}</p>
-    <p>Telefono numeris: {{ user.userprofile.phone_number }}</p>
-    <p>Paskutinis prisijungimas: {{ user.last_login }}</p>
+    <div class="profile">
+        <div class="profile-header">
+            {% if user_profile.avatar %}
+                <img src="{{ user_profile.avatar.url }}" alt="Avatar">
+            {% else %}
+                <p>Nuotrauka: Nėra paveikslėlio</p>
+            {% endif %}
+        </div>
+        <div class="profile-info">
+            <h1 class="mt-4">{{ user_profile.user.first_name }} {{ user_profile.user.last_name }}</h1>
+            <p>Vardas: {{ user_profile.user.first_name }}</p>
+            <p>Pavardė: {{ user_profile.user.last_name }}</p>
+            <p>El. paštas: {{ user_profile.user.email }}</p>
+            <p>Gimimo data: {{ user_profile.date_of_birth }}</p>
+            <p>Sekejai: {{ user_profile.followers.count }}</p>
+            <p>Biografija: {{ user_profile.biography }}</p>
+            <p>Tinklalapis: <a href="{{ user_profile.website }}">{{ user_profile.website }}</a></p>
+            <p>Adresas: {{ user_profile.address }}</p>
+            <p>Telefono numeris: {{ user_profile.phone_number }}</p>
+            <p>Paskutinis prisijungimas: {{ user_profile.user.last_login }}</p>
+        </div>
+    </div>
 
     <h4>Įdėtos prekės:</h4>
     <ul>
-        {% for product in user_products %}
+        {% for product in user_profile.user_products.all %}
             <li>
                 {{ product.title }}
-                <a href="{% url 'edit_product' product.id %}" class="btn btn-sm btn-primary">Redaguoti</a>
+                <a href="{% url 'edit_product' product.id %}" class="btn btn-sm btn-success">Redaguoti</a>
                 <a href="{% url 'delete_product' product.id %}" class="btn btn-sm btn-danger">Ištrinti</a>
             </li>
         {% empty %}
@@ -23,9 +39,10 @@
         {% endfor %}
     </ul>
 
-    <a href="{% url 'edit_profile' %}" class="btn btn-primary">Redaguoti Profilį</a>
-    <a href="{% url 'add_product' %}" class="btn btn-primary">Įkelti Prekę</a>
+    <a href="{% url 'edit_profile' %}" class="btn btn-success">Redaguoti Profilį</a>
+    <a href="{% url 'add_product' %}" class="btn btn-success">Įkelti Prekę</a>
 {% endblock %}
+
 
 
 
