--- a/svetaine/Rankdarbiai/templates/edit_profile.html
+++ b/svetaine/Rankdarbiai/templates/edit_profile.html
@@ -3,24 +3,51 @@
 {% block title %}Redaguoti Profilį{% endblock %}
 
 {% block content %}
-    <h1 class="mt-4">Redaguoti Profilį</h1>
-    <form>
-        <div class="form-group">
-            <label for="name">Vardas</label>
-            <input type="text" class="form-control" id="name" placeholder="Įveskite savo vardą">
-        </div>
-        <div class="form-group">
-            <label for="email">El. paštas</label>
-            <input type="email" class="form-control" id="email" placeholder="Įveskite savo el. paštą">
-        </div>
-        <div class="form-group">
-            <label for="address">Adresas</label>
-            <input type="text" class="form-control" id="address" placeholder="Įveskite naują adresą">
-        </div>
-        <div class="form-group">
-            <label for="phone">Telefonas</label>
-            <input type="text" class="form-control" id="phone" placeholder="Įveskite naują telefono numerį">
-        </div>
-        <button type="submit" class="btn btn-primary">Atnaujinti Profilį</button>
-    </form>
+    <div class="container mt-4">
+        <h1 class="mt-4">Redaguoti Profilį</h1>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="name">Vardas</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Įveskite savo vardą" value="{{ user_profile.user.first_name }}">
+            </div>
+            <div class="form-group">
+                <label for="surname">Pavardė</label>
+                <input type="text" class="form-control" id="surname" name="surname" placeholder="Įveskite savo pavardę" value="{{ user_profile.user.last_name }}">
+            </div>
+            <div class="form-group">
+                <label for="email">El. paštas</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Įveskite savo el. paštą" value="{{ user_profile.user.email }}">
+            </div>
+            <div class="form-group">
+                <label for="address">Adresas</label>
+                <input type="text" class="form-control" id="address" name="address" placeholder="Įveskite naują adresą" value="{{ user_profile.address }}">
+            </div>
+            <div class="form-group">
+                <label for="phone">Telefono numeris</label>
+                <input type="text" class="form-control" id="phone" name="phone" placeholder="Įveskite naują telefono numerį" value="{{ user_profile.phone_number }}">
+            </div>
+            <div class="form-group">
+                <label for="biography">Biografija</label>
+                <textarea class="form-control" id="biography" name="biography" placeholder="Įveskite savo biografiją">{{ user_profile.biography }}</textarea>
+            </div>
+            <div class="form-group">
+                <label for="location">Vieta</label>
+                <input type="text" class="form-control" id="location" name="location" placeholder="Įveskite savo vietą" value="{{ user_profile.location }}">
+            </div>
+            <div class="form-group">
+                <label for="avatar">Avataras</label>
+                <input type="file" class="form-control-file" id="avatar" name="avatar">
+            </div>
+            <div class="form-group">
+                <label for="website">Internetinis puslapis</label>
+                <input type="url" class="form-control" id="website" name="website" placeholder="Įveskite savo internetinio puslapio adresą" value="{{ user_profile.website }}">
+            </div>
+            <div class="form-group">
+                <label for="date_of_birth">Gimimo data</label>
+                <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" value="{{ user_profile.date_of_birth }}">
+            </div>
+            <button type="submit" class="btn btn-primary">Atnaujinti Profilį</button>
+        </form>
+    </div>
 {% endblock %}
