sutvarkytas_profilis_ir_profilio_redagavimas

--- a/svetaine/Rankdarbiai/static/css/styles.css
+++ b/svetaine/Rankdarbiai/static/css/styles.css
@@ -58,3 +58,10 @@ body {
 .carousel-control-next-icon {
     filter: invert(1) grayscale(100%) brightness(100%);/* keicia previous ir next strelyciu spalva */
 }
+
+<style>
+.avatar {
+    width: 150px;
+    height: 150px;
+}
+</style>
