--- a/svetaine/Rankdarbiai/templates/help.html
+++ b/svetaine/Rankdarbiai/templates/help.html
@@ -33,7 +33,7 @@
                         <label for="message" class="form-label">Žinutė</label>
                         <textarea class="form-control" id="message" name="message" rows="5"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-primary">Siųsti</button>
+                    <button type="submit" class="btn btn-success">Siųsti</button>
                 </form>
             </div>
         </div>
