--- a/svetaine/Rankdarbiai/templates/home.html
+++ b/svetaine/Rankdarbiai/templates/home.html
@@ -2,10 +2,10 @@
 
 {% block content %}
   <div class="jumbotron" style="background-color: #FFD966;">
-    <img src="/static/imageonline-co-textimage.jpg" alt="Paveikslėlis" class="nav-icon" style="width: 1050px; height:650px;" >
+    <img src="/static/imageonline-co-textimage.jpg" alt="Rankdarbių Parduotuvės logotipas" class="nav-icon" style="width: 1050px; height:650px;" >
     <h1>Sveiki atvykę į Rankdarbių Parduotuvę!</h1>
     <p>Esame didžiausia rankų darbo kūrinių rinkmena Lietuvoje.</p>
-    <a href="{% url 'products' %}" class="btn btn-primary">Peržiūrėti kūrinius</a>
+    <a href="{% url 'products' %}" class="btn btn-success">Atraskite rankų darbo stebuklus</a>
   </div>
 
   <div class="row">
@@ -53,6 +53,7 @@
     </div>
   </div>
 {% endblock %}
+
 
 
 
