--- a/svetaine/Rankdarbiai/templates/about.html
+++ b/svetaine/Rankdarbiai/templates/about.html
@@ -5,16 +5,16 @@
 {% block content %}
     <div class="container">
         <h1 class="mt-4 mb-3">Apie Mus</h1>
-        <p>Sveiki atvykę į mūsų svetainę, kurioje galite prekiauti savo rankdarbiais. Mes siūlome platformą, kurioje kūrėjai gali dalintis ir parduoti savo unikalius rankdarbius. Nuo paprastų, bet stilingų rankdarbių iki unikalių meno kūrinių - čia galite rasti viską. Prisijunkite prie mūsų bendruomenės ir pradėkite prekiauti savo rankdarbiais!</p>
+        <h5>Sveiki atvykę į mūsų svetainę, kurioje galite prekiauti savo rankdarbiais. Mes siūlome platformą, kurioje kūrėjai gali dalintis ir parduoti savo unikalius rankdarbius. Nuo paprastų, bet stilingų rankdarbių iki unikalių meno kūrinių - čia galite rasti viską. Prisijunkite prie mūsų bendruomenės ir pradėkite prekiauti savo rankdarbiais!</h5>
 
         <div class="row mt-5">
             <div class="col-lg-6">
                 <img src="https://i.pinimg.com/originals/e7/49/ca/e749ca2ad170a26247b116fd8c242837.jpg" alt="Rankdarbių nuotrauka 1" class="img-fluid">
-                <p>Čia yra vienas iš nuostabių rankdarbių, kuriuos galite rasti mūsų svetainėje. Šis kūrėjas pasitelkė savo kūrybą ir meistriškumą, kad sukurtų šį stilingą daiktą!</p>
+                <h5>Čia yra vienas iš nuostabių rankdarbių, kuriuos galite rasti mūsų svetainėje. Šis kūrėjas pasitelkė savo kūrybą ir meistriškumą, kad sukurtų šį stilingą daiktą!</h5>
             </div>
             <div class="col-lg-6">
                 <img src="https://img.buzzfeed.com/buzzfeed-static/static/2014-02/enhanced/webdr08/28/17/enhanced-buzz-2078-1393627656-13.jpg?downsize=600:*&output-format=auto&output-quality=auto" alt="Rankdarbių nuotrauka 2" class="img-fluid">
-                <p>Stebiname savo lankytojus unikaliais rankdarbiais, tokius kaip šis. Tai yra dar vienas puikus pavyzdys, kaip mūsų kūrėjai naudoja savo talentą ir kūrybiškumą, kad sukurtų nuostabius daiktus.</p>
+                <h5>Stebiname savo lankytojus unikaliais rankdarbiais, tokius kaip šis. Tai yra dar vienas puikus pavyzdys, kaip mūsų kūrėjai naudoja savo talentą ir kūrybiškumą, kad sukurtų nuostabius daiktus.</h5>
             </div>
         </div>
     </div>
