--- a/svetaine/Rankdarbiai/templates/add_product.html
+++ b/svetaine/Rankdarbiai/templates/add_product.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Add Product</h2>
+  <h2>Pridėti Produktą</h2>
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Save</button>
+    <button type="submit">Išsaugoti</button>
   </form>
 {% endblock %}
+
