--- a/svetaine/Rankdarbiai/templates/base.html
+++ b/svetaine/Rankdarbiai/templates/base.html
@@ -36,6 +36,49 @@
         .navbar-nav > div:last-child {
             justify-content: flex-end;
         }
+
+        .carousel-control-prev-icon,
+        .carousel-control-next-icon {
+            background-image: none;
+        }
+
+        .carousel-control-prev::before {
+            content: '←';
+            font-size: 4rem;
+            color: black;
+        }
+
+        .carousel-control-next::before {
+            content: '→';
+            font-size: 4rem;
+            color: black;
+        }
+        .carousel-item img {
+            width: 100%;
+            height: auto;
+        }
+
+        .carousel-control-prev,
+        .carousel-control-next {
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+         .aspect-ratio {
+            position: relative;
+            width: 100%;
+            padding-bottom: 100%; /* Kadravimo santykis: 1:1 (100% plotis atitinka 100% aukštį) */
+            overflow: hidden;
+         }
+
+        .aspect-ratio img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Užtikrina, kad paveikslėlis bus proporcingai kadravimas */
+        }
     </style>
 </head>
 <body>
