--- a/svetaine/Rankdarbiai/templates/products.html
+++ b/svetaine/Rankdarbiai/templates/products.html
@@ -3,14 +3,16 @@
 {% block title %}Produktai{% endblock %}
 
 {% block content %}
-  <h1>Mūsų kūriniai</h1>
+  <h1 class="text-center">Mūsų kūriniai</h1>
 
   <div class="row">
     {% for product in products %}
       <div class="col-md-4">
         <div class="card mb-4" style="background-color: #FFD966;">
           <a href="{% url 'product_detail' product.id %}">
-            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
+            <div class="aspect-ratio">
+              <img src="{{ product.image.url }}" class="card-img-top img-fluid" alt="{{ product.title }}">
+            </div>
             <div class="card-body" style="color: #000000;">
               <h5 class="card-title">{{ product.title }}</h5>
               <p class="card-text">{{ product.description }}</p>
@@ -22,6 +24,7 @@
     {% endfor %}
   </div>
 {% endblock %}
+
 
 
 
