--- a/svetaine/Rankdarbiai/templates/checkout.html
+++ b/svetaine/Rankdarbiai/templates/checkout.html
@@ -94,7 +94,7 @@
             </div>
           </div>
           <hr class="my-4">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Apmokėti</button>
+          <button class="w-100 btn btn-success btn-lg" type="submit">Apmokėti</button>
         </form>
       </div>
     </div>
