--- a/svetaine/Rankdarbiai/templates/home.html
+++ b/svetaine/Rankdarbiai/templates/home.html
@@ -41,7 +41,7 @@
                 <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.title }}">
                 <div class="card-body">
                   <h5 class="card-title text-center">{{ product.title }}</h5>
-                  <a href="{% url 'product_detail' product.id %}" class="btn btn-primary btn-block">Detaliau</a>
+                  <a href="{% url 'product_detail' product.id %}" class="btn btn-success btn-block">Detaliau</a>
                 </div>
               </div>
             </div>
