--- a/svetaine/Rankdarbiai/templates/payment_failure.html
+++ b/svetaine/Rankdarbiai/templates/payment_failure.html
@@ -7,5 +7,6 @@
         <h1 class="mt-4 mb-3">Mokėjimas nepavyko</h1>
 
         <p>Atsiprašome, mokėjimas nepavyko.</p>
+        <a href="{% url 'home' %}" class="btn btn-success">Grįžti į pagrindinį puslapį</a>
     </div>
 {% endblock %}
