--- a/svetaine/Rankdarbiai/templates/products.html
+++ b/svetaine/Rankdarbiai/templates/products.html
@@ -5,6 +5,14 @@
 {% block content %}
   <h1 class="text-center">Mūsų kūriniai</h1>
 
+  {% if messages %}
+    {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+  {% endif %}
+
   <div class="row">
     {% for product in products %}
       <div class="col-md-4">
