--- a/svetaine/Rankdarbiai/templates/user_profile.html
+++ b/svetaine/Rankdarbiai/templates/user_profile.html
@@ -3,7 +3,7 @@
 {% block title %}Vartotojo Profilis{% endblock %}
 
 {% block content %}
-    <h1>{{ user_profile.user.username }}</h1> <!-- Čia buvo pridėtas vartotojo vardas -->
+    <h1>{{ user_profile.user.username }}</h1>
     <div class="profile">
         <div class="profile-header">
             {% if user_profile.avatar %}
@@ -28,18 +28,19 @@
     </div>
 
     <h4>Įdėtos prekės:</h4>
-    <ul>
+    <ul class="list-unstyled">
         {% for product in user_profile.user_products.all %}
-            <li>
-                <a href="{% url 'product_detail' product.id %}">{{ product.title }}</a>
-                <a href="{% url 'edit_product' product.id %}" class="btn btn-sm btn-success">Redaguoti</a>
-                <a href="{% url 'delete_product' product.id %}" class="btn btn-sm btn-danger">Ištrinti</a>
-            </li>
+        <li class="mb-2">
+            <a href="{% url 'product_detail' product.id %}">{{ product.title }}</a>
+            <a href="{% url 'edit_product' product.id %}" class="btn btn-sm btn-success">Redaguoti</a>
+            <a href="{% url 'delete_product' product.id %}" class="btn btn-sm btn-danger">Ištrinti</a>
+        </li>
         {% empty %}
-            <li>Nėra įdėtų prekių.</li>
+        <li>Nėra įdėtų prekių.</li>
         {% endfor %}
     </ul>
-
     <a href="{% url 'edit_profile' %}" class="btn btn-success">Redaguoti Profilį</a>
     <a href="{% url 'add_product' %}" class="btn btn-success">Įkelti Prekę</a>
+    <br>
+    <br>
 {% endblock %}
