suremontuota_svetaine_veikimas_atstatytas

--- a/svetaine/Rankdarbiai/templates/registration_success.html
+++ b/svetaine/Rankdarbiai/templates/registration_success.html
@@ -5,4 +5,5 @@
 {% block content %}
     <h1 class="mt-4">Registracija sėkminga</h1>
     <p>Jūs sėkmingai užsiregistravote! Dabar galite prisijungti su savo prisijungimo duomenimis.</p>
+    <a href="{% url 'login' %}" class="btn btn-success">Prisijungti</a>
 {% endblock %}
