--- a/svetaine/Rankdarbiai/templates/products.html
+++ b/svetaine/Rankdarbiai/templates/products.html
@@ -7,9 +7,9 @@
 
   {% if messages %}
     {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}">
-            {{ message }}
-        </div>
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
     {% endfor %}
   {% endif %}
 
@@ -23,12 +23,15 @@
             </div>
             <div class="card-body" style="color: #000000;">
               <h5 class="card-title">{{ product.title }}</h5>
-              <p class="card-text">{{ product.description }}</p>
               <p class="card-text">Kaina: {{ product.price }} EUR</p>
             </div>
           </a>
           <div class="card-footer">
-            <a href="{% url 'add_to_favorites' product.id %}" class="btn btn-success">Pridėti prie mėgstamų</a>
+            <div class="btn-group btn-group-justified">
+              <a href="{% url 'add_to_favorites' product.id %}" class="btn btn-success">Įdėti į mėgstamus</a>
+               <span style="margin: 0 5px;"></span>
+              <a href="{% url 'add_to_cart' product.id %}" class="btn btn-success">Įdėti į krepšelį</a>
+            </div>
           </div>
         </div>
       </div>
