--- a/svetaine/Rankdarbiai/templates/help.html
+++ b/svetaine/Rankdarbiai/templates/help.html
@@ -8,6 +8,9 @@
         <div class="row">
             <div class="col-md-6">
                 <h1 class="mt-4">Pagalba</h1>
+
+
+
                 <p>Sveiki! Jei turite kokių nors klausimų arba reikia pagalbos, prašome susisiekti su mumis.</p>
                 <p>Mūsų klientų aptarnavimo komanda yra pasiruošusi padėti jums.</p>
                 <ul>
@@ -19,6 +22,15 @@
             </div>
             <div class="col-md-6">
                 <h2>Susisiekite su mumis</h2>
+
+                 {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ message.tags }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endif %}
+
                 <form action="#" method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
