beveik_viskas_jau

--- a/svetaine/Rankdarbiai/templates/payment_success.html
+++ b/svetaine/Rankdarbiai/templates/payment_success.html
@@ -7,7 +7,7 @@
   <main>
     <div class="py-5 text-center">
       <h2>Apmokėjimas sėkmingas!</h2>
-      <p>Dėkojame, kad apsipirkote mūsų parduotuvėje.</p>
+      <p>Dėkojame, kad apsipirkote mūsų parduotuvėje. Prekes netrukus pristatysime Jūsų nurodytu adresu. Apie pristatymo detales būsite informuoti elektroniniu paštu bei SMS žinute.</p>
       <a href="{% url 'home' %}" class="btn btn-success">Grįžti į pagrindinį puslapį</a>
     </div>
   </main>
