--- a/svetaine/Rankdarbiai/templates/login.html
+++ b/svetaine/Rankdarbiai/templates/login.html
@@ -26,7 +26,7 @@
         <input type="checkbox" name="remember_me" value="1"> Prisiminti mane
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Prisijungti</button>
+    <button class="w-100 btn btn-lg btn-success" type="submit">Prisijungti</button>
   </form>
 </main>
 {% endblock %}
