--- a/svetaine/Rankdarbiai/templates/contact.html
+++ b/svetaine/Rankdarbiai/templates/contact.html
@@ -2,7 +2,7 @@
 
 {% block title %}Kontaktai{% endblock %}
 
-{% block content %}
+{% block content %}-
   <h1 class="mt-4">Kontaktai</h1>
 
   {% if messages %}
