--- a/svetaine/Rankdarbiai/templates/product_detail.html
+++ b/svetaine/Rankdarbiai/templates/product_detail.html
@@ -14,7 +14,14 @@
                     <p>{{ product.description }}</p>
                     <p>Kaina: {{ product.price }} EUR</p>
                     <p>Turimas kiekis: {{ product.quantity }} vnt.</p>
-                    <a href="{% url 'add_to_cart' product.id %}" class="btn btn-success">Įdėti į krepšelį</a>
+                    {% if product.seller %}
+                        <p>Pardavėjas: {{ product.seller.username }}</p>
+                    {% endif %}
+                    <div class="btn-group btn-group-justified">
+                        <a href="{% url 'add_to_favorites' product.id %}" class="btn btn-success">Įdėti į mėgstamus</a>
+                        <span style="margin: 0 5px;"></span>
+                        <a href="{% url 'add_to_cart' product.id %}" class="btn btn-success">Įdėti į krepšelį</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -26,7 +33,12 @@
         </div>
         <div class="card-body">
             {% for review in reviews %}
-                <p><strong>{{ review.user.username }}</strong>: {{ review.text }}</p>
+                <div class="card mt-3">
+                    <div class="card-body">
+                        <h6 class="card-title"><strong>{{ review.user.username }}</strong></h6>
+                        <p class="card-text">{{ review.text }}</p>
+                    </div>
+                </div>
             {% empty %}
                 <p>Nėra atsiliepimų apie šį produktą.</p>
             {% endfor %}
@@ -48,4 +60,5 @@
         </div>
     {% endif %}
 {% endblock %}
+
 
