--- a/svetaine/Rankdarbiai/templates/register.html
+++ b/svetaine/Rankdarbiai/templates/register.html
@@ -22,7 +22,7 @@
             <label for="confirm-password">Patvirtinti slaptažodį</label>
             <input type="password" class="form-control" id="confirm-password" name="confirm_password" placeholder="Patvirtinkite slaptažodį" required>
         </div>
-        <button type="submit" class="btn btn-primary">Registruotis</button>
+        <button type="submit" class="btn btn-success">Registruotis</button>
     </form>
 {% endblock %}
 
